--- a/templates/base.html
+++ b/templates/base.html
@@ -291,7 +291,8 @@
     <footer>
         <span id="footer-content">
             <br>
-            <a style="color: #808080" href="https://dmoj.ca">proudly powered by <b>DMOJ</b></a> |
+            <a style="color: #808080" href="https://dmoj.ca">proudly powered by <b>DMOJ</b></a>
+            <a target="_blank" href="https://github.com/LQDJudge/online-judge"> | developed by PTITHCM team</a> |
             {% if i18n_config.footer %}
                 {{ i18n_config.footer|safe }} |
             {% endif %}
